alterar banco de dados

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=projeto
 #utilizo esse comando para conectar com o meu banco de dados postgresql
-spring.datasource.url=jdbc:postgresql://localhost:5432/projeto
+spring.datasource.url=jdbc:postgresql://postgres.railway.internal:5432/railway
 spring.datasource.username=postgres
-spring.datasource.password=376131
+spring.datasource.password=idnsSqSeHZpIWyEgScMuTyDVzUdpwEvO
 
 #utiliza para fazer a configuraçâo de qual lingua meu banco de dados vai falar, só assim o HIBERNATE e o JPA entende
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
