--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,1 @@
-spring.application.name=projeto
-#utilizo esse comando para conectar com o meu banco de dados postgresql
-spring.datasource.url=jdbc:postgresql://postgres.railway.internal:5432/railway
-spring.datasource.username=postgres
-spring.datasource.password=idnsSqSeHZpIWyEgScMuTyDVzUdpwEvO
-
-#utiliza para fazer a configuraçâo de qual lingua meu banco de dados vai falar, só assim o HIBERNATE e o JPA entende
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-
-#toda vez que eu iniciar o hibernate ele vai criar minhas tabelas de acordo com as anotação, por ser do tipo drop, toda vez que eu terminar minha aplicação as informações vão ser apagadas
-spring.jpa.hibernate.ddl-auto=create-drop
-
-#o proprio hibernate mostra no consele do spring o comando que ele tá execultando
-spring.jpa.show-sql=true
+spring.profiles.active=${APP_PROFILE:local}
